
=item *

Publishing media documents that have had new files uploaded to them no longer
causes a publish failure. Reported by Christian Niles and numerous others.
[David]

=item *

Added even I<more> code to the C<inst/upgrade/1.8.9/fix_publish_status.pl>
upgrade script to better cover the possible variations in publish status
inaccuracies. [Alex Howarth, David]

=back

=head1 VERSION 1.10.2 "Summer" (2006-06-22)

=head2 Improvements

=over

=item *

Added the C<subelement_id> parameter to the story and media C<list()> methods.
[David]

=item *

Added placeholder for Japanese localization. Expect a translation soon!
[David]

=item *

The "codeselect" field's Perl code can now return an array of array references
or a hash reference, in addition to the previous support for an even-sized
array reference. [David]

=item *

Added a "Republish" checkbox and corresponding "Publish Checked" button to the
Story and Media "Find" pages for stories and media not currently in workflow
and to which the user has PUBLISH permission. Based on a patch from Serge
Sozonoff. [David]

=item *

Added tests for L<Bric::SOAP::Auth|Bric::SOAP::Auth>, although they haven't
yet been integrated into C<make devtest>. [Scott]

=item *

The number of items on a desk can now be displayed next to the desk's name in
the navigation menu, e.g. "Edit (10)". This feature is configurable on a
per-user basis via the new "Show Desk Asset Counts" preference. Based heavily
on a patch from Alex Howarth. [Marshall]

=item *

Updated F<README.MacOSX> with instructions on how to use the built-in version
of Apache instead of compiling everything yourself. Also fixed a broken link
and an outdated warning about L<Apache::SizeLimit|Apache::SizeLimit>.
[Marshall]

=item *

Internationalized the JavaScript messages for the Find/Replace dialog box,
although there are currently no translations. [David]

=item *

Added a close icon to the drag bar of the dialog box. This is useful when the